# IKON-backend

./: .dockerignore  .eslintignore  .eslintrc.yml  .gitignore  .gitmodules  README.md  docker-compose (copy).yml  docker-compose.build.yml  docker-compose.gpu.yml  docker-compose.notebook.yml  docker-compose.yml  openapi.yaml  package-lock.json  package.json  start.sh  start_backend.sh  start_notebook.sh  tSNE_t4-c4_p10-lr401.json
.circleci/: config.yaml  config.yml
.github/workflows/: dockerpush.yml  google.yml
assets/config/: config.json
assets/data/: Untitled.ipynb  WTA-Formate.csv  WTA-Zielgruppen.csv  projects.csv  projects.json  taxonomy.csv  train_small.csv.bz2
assets/scripts/: secret2env.sh
assets/secrets/: README.md
docs/: architectureProposal.xml  componentdiagram  mwc.html  mwc.openapi.json  openapi.yaml  sharing.html  sharing.openapi.json  tes.html  tes.openapi.json
src/sharing/: Dockerfile  pyproject.toml
src/sharing/src/: main.py  orderedshelf.py
src/topicextraction/: .gitignore  Dockerfile  Dockerfile.build  Pipfile  preprocess_and_train_models.py  pyproject.toml  req.txt  requirements.txt
src/topicextraction/nlp/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  circle.css.html  nlp_pipeline.ipynb  scatter.css.html  scatter.js
src/topicextraction/src/: circle.js  gepris_topics.ipynb  gunicorn_conf.py  local_pipeline.py  main.py  nlp_pipeline-Interviews.ipynb  nlp_pipeline.ipynb  nlp_pipeline.py  nlpflowchart_old.bpmn  pipeline.py  preprocess_and_train_models.py  scatter.js  test.py
src/topicextraction/src/Clustering/: clustering.py
src/topicextraction/src/Debug/: debug.py
src/topicextraction/src/Embedding/: embedding.py
src/topicextraction/src/Input/: input.py
src/topicextraction/src/Linearization/: linearization.py
src/topicextraction/src/Planereduction/: planereduction.py
src/topicextraction/src/Preprocessing/: preprocessing.py
src/topicextraction/src/Topicextraction/: topicextraction.py
utils/: preprocess_and_train_models.py
(+114 files in other folders)
