[tool.poetry]
name = "topicextraction"
version = "0.1.0"
description = ""
authors = ["wittenator <wittenator@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.21.3"
bokeh = "^1.4"
lapjv = "^1.3"
bert-serving-client = "^1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
