[tool.poetry]
name = "topicextraction"
version = "0.1.0"
description = ""
authors = ["wittenator <wittenator@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.21.3"
gensim = "^3.8"
bokeh = "^1.4"
ipykernel = "^5.1"
ipywidgets = "^7.5"
plotly = "^4.2"
lapjv = "^1.3"
psycopg2 = "^2.8"
spacy = "^2.2"
requests = "^2.22"
skorch = "^0.6.0"
matplotlib = "^3.1"
pandas = "^0.25.3"
pyemd = "^0.5.1"
pygtrie = "^2.3"
dill = "^0.3.1"
fastapi = "^0.45.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
