[tool.poetry]
name = "topicextraction"
version = "0.1.0"
description = ""
authors = ["wittenator <wittenator@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.7"
gensim = "^3.8.2"
spacy = "^2.2.4"
bokeh = "^2.0.2"
lapjv = "^1.3.1"
scikit-learn = "^0.22.2"
notebook = "^6.0.3"
ipywidgets = "^7.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
